moved decorators, transaction view, transaction links

--- a/src/main/webapp/decorators/decorator.xhtml
+++ b/src/main/webapp/decorators/decorator.xhtml
@@ -71,6 +71,8 @@ Environmental damage caused by the use must be kept as small as possible.
                                    onclick="location='/internal/account.xhtml'">
                         <p:menuitem value="Mein Konto" url="/internal/account.xhtml" icon="ui-icon-pencil"/>
                         <p:menuitem value="Meine Einstellungen" url="/internal/members/user.xhtml?me=me"/>
+                        <p:menuitem value="Überweisung"
+                                    url="/internal/transaction.xhtml?clear=clear" icon="ui-icon-transferthick-e-w"/>
                         <p:menuitem value="Meine Angebote" url="/impressum.xhtml" icon="ui-icon-star"/>
                         <p:separator/>
                         <p:menuitem value="logout" url="/logout/logout.xhtml" icon="ui-icon-power"/>
