--- a/src/main/webapp/decorators/menuDecorator.xhtml
+++ b/src/main/webapp/decorators/menuDecorator.xhtml
@@ -32,31 +32,31 @@ Environmental damage caused by the use must be kept as small as possible.
                 <p:menu id="mainMenu">
 
                     <p:menuitem styleClass="#{userSession.activeMenu('dashboard')}" value="Dashboard"
-                                outcome="/dashboard.xhtml" icon="ui-icon-home"/>
+                                url="/dashboard.xhtml" icon="ui-icon-home"/>
 
-                    <p:menuitem styleClass="#{userSession.activeMenu('internal/offers')}" value="Angebote"
-                                outcome="/internal/offers.xhtml"
+                    <p:menuitem styleClass="#{userSession.activeMenu('internal/offers/')}" value="Angebote"
+                                url="/internal/offers/offers.xhtml"
                                 icon="ui-icon-star" rendered="#{userSession.loggedIn}"/>
 
                     <p:menuitem styleClass="#{userSession.activeMenu('internal/members')}" value="Mitglieder"
-                                outcome="/internal/members.xhtml"
+                                url="/internal/members/members.xhtml"
                                 icon="ui-icon-person" rendered="#{userSession.loggedIn}"/>
 
-                    <p:menuitem styleClass="#{userSession.activeMenu('ring')}" value="Tauschring" outcome="/ring.xhtml"
+                    <p:menuitem styleClass="#{userSession.activeMenu('ring')}" value="Tauschring" url="/ring.xhtml"
                                 icon="ui-icon-refresh"/>
 
-                    <p:menuitem styleClass="#{userSession.activeMenu('who')}" value="Wer sind wir" outcome="/who.xhtml"
+                    <p:menuitem styleClass="#{userSession.activeMenu('who')}" value="Wer sind wir" url="/who.xhtml"
                                 icon="ui-icon-help"/>
 
                     <p:menuitem styleClass="#{userSession.activeMenu('news')}" value="Tauschringzeitung"
-                                outcome="/news.xhtml"
+                                url="/news.xhtml"
                                 icon="ui-icon-document"/>
 
-                    <p:menuitem styleClass="#{userSession.activeMenu('links')}" value="Links" outcome="/links.xhtml"
+                    <p:menuitem styleClass="#{userSession.activeMenu('links')}" value="Links" url="/links.xhtml"
                                 icon="ui-icon-link"/>
 
                     <p:menuitem styleClass="#{userSession.activeMenu('impressum')}" value="Kontakt &amp; Impressum"
-                                outcome="/impressum.xhtml"
+                                url="/impressum.xhtml"
                                 icon="ui-icon-comment"/>
                 </p:menu>
                 <p:themeSwitcher style="width:165px" id="defaultSwitcher" value="#{themeSwitcher.theme}">
