--- a/src/main/webapp/impressum.xhtml
+++ b/src/main/webapp/impressum.xhtml
@@ -21,17 +21,13 @@ excluded.
 Environmental damage caused by the use must be kept as small as possible.
 
 -->
-<ui:composition template="menuDecorator.xhtml"
+<ui:composition template="/decorators/menuDecorator.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:p="http://primefaces.org/ui">
     <ui:define name="contentWithMenu">
         <div class="container">
-
-
-
 
 
             #{userSession.activeMenu('dashboard')}
