--- a/src/main/webapp/internal/offers/offers.xhtml
+++ b/src/main/webapp/internal/offers/offers.xhtml
@@ -21,7 +21,7 @@ excluded.
 Environmental damage caused by the use must be kept as small as possible.
 
 -->
-<ui:composition template="../noMenuDecorator.xhtml"
+<ui:composition template="/decorators/noMenuDecorator.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:h="http://java.sun.com/jsf/html"
@@ -39,12 +39,23 @@ Environmental damage caused by the use must be kept as small as possible.
                         <h:panelGrid columns="2" columnClasses="column" cellpadding="5">
                             <h:outputText value="User:"/>
                             <h:panelGroup>
-                                <img src="#{userSession.selectedAdvertisement.owner.gravatarUrl30}"
-                                     alt="avatar #{userSession.selectedAdvertisement.owner.displayName}"/>
-                                <h:outputText value="#{userSession.selectedAdvertisement.owner.id}"/>
+                                <a href="/internal/members/user.xhtml?userId=#{userSession.selectedAdvertisement.owner.id}">
+                                    <img src="#{userSession.selectedAdvertisement.owner.gravatarUrl30}"
+                                         alt="avatar #{userSession.selectedAdvertisement.owner.displayName}"/>
+                                    <h:outputText value="#{userSession.selectedAdvertisement.owner.id}"/>
+                                </a>
                             </h:panelGroup>
+
                             <h:outputText value="Name:"/>
                             <h:outputText value="#{userSession.selectedAdvertisement.name}"/>
+
+                            <h:outputText value="Überweisung:"/>
+                            <h:panelGroup>
+                                <a href="/internal/transaction.xhtml?receiverId=#{userSession.selectedAdvertisement.owner.id}&amp;adId=#{userSession.selectedAdvertisement.id}">
+                                    überweisung an #{userSession.selectedAdvertisement.owner.id}
+                                </a>
+                            </h:panelGroup>
+
                             <h:outputText value="Anzeige:"/>
                             <h:outputText value="#{userSession.selectedAdvertisement.content}"/>
                         </h:panelGrid>
