--- a/src/main/webapp/logout.xhtml
+++ b/src/main/webapp/logout.xhtml
@@ -21,7 +21,7 @@ excluded.
 Environmental damage caused by the use must be kept as small as possible.
 
 -->
-<ui:composition template="decorator.xhtml"
+<ui:composition template="/decorators/decorator.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
         >
