--- a/src/main/webapp/internal/members/user.xhtml
+++ b/src/main/webapp/internal/members/user.xhtml
@@ -39,7 +39,7 @@ Environmental damage caused by the use must be kept as small as possible.
                     <h:panelGroup>
                         <img src="#{user.selectedUser.gravatarUrl250}" alt="avatar"/>
                         <ui:fragment rendered="#{user.me}">
-                            <p>Der Avatar lässt sich auch <a href="http://de.gravatar.com/">gravatar.com</a> ändern.</p>
+                            <p>Der Avatar lässt sich auf <a href="http://de.gravatar.com/">gravatar.com</a> ändern.</p>
                         </ui:fragment>
                     </h:panelGroup>
 
