--- a/src/main/webapp/logout/logout.xhtml
+++ b/src/main/webapp/logout/logout.xhtml
@@ -36,7 +36,7 @@ Environmental damage caused by the use must be kept as small as possible.
     <div class="header">
         <div class="container">
 
-            <a href="/dashboard.xhtml">
+            <a href="${pageContext.request.servletPath}/dashboard.xhtml">
                 <h:graphicImage name="/img/logoGreen.png" alt="logo" styleClass="headerLogo"/><span id="headLine">Tauschring
                 <span class="green">Hamburg</span></span>
             </a>
