--- a/src/main/webapp/decorators/menuDecorator.xhtml
+++ b/src/main/webapp/decorators/menuDecorator.xhtml
@@ -34,6 +34,10 @@ Environmental damage caused by the use must be kept as small as possible.
                     <p:menuitem styleClass="#{userSession.activeMenu('dashboard')}" value="Dashboard"
                                 url="/dashboard.xhtml" icon="ui-icon-home"/>
 
+                    <p:menuitem styleClass="#{userSession.activeMenu('signUp')}" value="Mitglied werden"
+                                url="/signUp.xhtml"
+                                icon="ui-icon-person" rendered="#{userSession.notLoggedIn}"/>
+
                     <p:menuitem styleClass="#{userSession.activeMenu('internal/offers/')}" value="Angebote"
                                 url="/internal/offers/offers.xhtml"
                                 icon="ui-icon-star" rendered="#{userSession.loggedIn}"/>
