--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -26,6 +26,15 @@ Environmental damage caused by the use must be kept as small as possible.
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui">
     <ui:define name="contentWithMenu">
+        <p:panel header="!!! Testseite !!!" style="background: red">
+            <p>Dies ist lediglich der Versuch einer neuen Tauschringseit.</p>
+
+            <p>Inhalte haben keinerlei Relevanz</p>
+
+            <p>echte Informationen erhällst du auf http://www.tauschring-hamburg.org/</p>
+        </p:panel>
+
+        <p/>
 
 
         <p:panel header="Tauschring Hamburg">
