--- a/src/main/webapp/impressum.xhtml
+++ b/src/main/webapp/impressum.xhtml
@@ -27,7 +27,7 @@ Environmental damage caused by the use must be kept as small as possible.
                 xmlns:p="http://primefaces.org/ui">
     <ui:define name="contentWithMenu">
         <p:panel header="!!! Testseite !!!" style="background: red">
-            <p>Dies ist lediglich der Versuch einer neuen Tauschringseit.</p>
+            <p>Dies ist lediglich der Versuch einer neuen Tauschringseite.</p>
 
             <p>Inhalte haben keinerlei Relevanz</p>
 
