--- a/src/main/webapp/decorators/noMenuDecoratorBack.xhtml
+++ b/src/main/webapp/decorators/noMenuDecoratorBack.xhtml
@@ -24,9 +24,11 @@ Environmental damage caused by the use must be kept as small as possible.
 <ui:composition template="decorator.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:p="http://primefaces.org/ui"
         >
     <ui:define name="content">
         <div class="container">
+            <p:button icon="ui-icon-home" outcome="/dashboard.xhtml" value="zurück"/>
             <ui:insert name="contentWithoutMenu"/>
         </div>
     </ui:define>
