offers => ads, refactored AdNavi

--- a/src/main/webapp/decorators/menuDecorator.xhtml
+++ b/src/main/webapp/decorators/menuDecorator.xhtml
@@ -38,8 +38,8 @@ Environmental damage caused by the use must be kept as small as possible.
                                 url="/signUp.xhtml"
                                 icon="ui-icon-person" rendered="#{userSession.notLoggedIn}"/>
 
-                    <p:menuitem styleClass="#{userSession.activeMenu('internal/offers/')}" value="Angebote"
-                                url="/internal/offers/offers.xhtml"
+                    <p:menuitem styleClass="#{userSession.activeMenu('internal/ads/')}" value="Angebote"
+                                url="/internal/ads/ads.xhtml"
                                 icon="ui-icon-star" rendered="#{userSession.loggedIn}"/>
 
                     <p:menuitem styleClass="#{userSession.activeMenu('internal/members')}" value="Mitglieder"
