--- a/src/main/webapp/internal/ads/ads.xhtml
+++ b/src/main/webapp/internal/ads/ads.xhtml
@@ -29,10 +29,10 @@ Environmental damage caused by the use must be kept as small as possible.
     <ui:define name="contentWithoutMenu">
         <h:form id="adForm">
             <div class="menuContainer">
-                <p:menu model="#{ad.topAdMenu}"/>
+                <p:menu model="#{ad.topAdMenu}" style="width:180px;"/>
 
                 <p/>
-                <p:slideMenu style="width:180px;" model="#{adNavigation.offerNavigation}"/>
+                <p:slideMenu style="width:180px;" model="#{ad.navigation}"/>
             </div>
 
             <div id="contentWithMenu">
