--- a/src/main/webapp/decorators/menuDecorator.xhtml
+++ b/src/main/webapp/decorators/menuDecorator.xhtml
@@ -38,7 +38,7 @@ Environmental damage caused by the use must be kept as small as possible.
                                 url="/signUp.xhtml"
                                 icon="ui-icon-person" rendered="#{userSession.notLoggedIn}"/>
 
-                    <p:menuitem styleClass="#{userSession.activeMenu('internal/ads/')}" value="Angebote"
+                    <p:menuitem styleClass="#{userSession.activeMenu('internal/ads/')}" value="Anzeigen"
                                 url="/internal/ads/ads.xhtml"
                                 icon="ui-icon-star" rendered="#{userSession.loggedIn}"/>
 
