--- a/src/main/webapp/internal/ads/ads.xhtml
+++ b/src/main/webapp/internal/ads/ads.xhtml
@@ -25,7 +25,8 @@ Environmental damage caused by the use must be kept as small as possible.
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:p="http://primefaces.org/ui">
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:f="http://java.sun.com/jsf/core">
     <ui:define name="contentWithoutMenu">
         <h:form id="adForm">
             <div class="menuContainer">
@@ -37,6 +38,24 @@ Environmental damage caused by the use must be kept as small as possible.
             </div>
 
             <div id="contentWithMenu">
+                <p:panel header="neue Anzeige" rendered="#{ad.topAdMenuItemType.create}">
+                    <h:panelGrid columns="2" columnClasses="column" cellpadding="5">
+                        <h:outputText value="Titel"/>
+                        <p:inputText value="#{ad.newAd.title}"/>
+                        <h:outputText value="Aangebot/Gesuch:"/>
+                        <p:selectOneMenu value="#{ad.newAd.type}">
+                            <f:selectItems value="#{ad.adType}" var="type" itemLabel="#{type.translation}"
+                                           itemValue="#{type}"/>
+                        </p:selectOneMenu>
+                        <h:outputText value="Kategorie:"/>
+                        <p:selectOneMenu value="#{ad.newAd.category}">
+                            <f:selectItems value="#{ad.categories}" var="cat" itemLabel="#{cat.desc}"
+                                           itemValue="#{cat}"/>
+                        </p:selectOneMenu>
+                        <p:commandButton value="Erstellen" actionListener="#{ad.create}"/>
+                    </h:panelGrid>
+                </p:panel>
+
                 <h:panelGroup id="toUpdate" layout="block">
                     <p:panel header="#{ad.selectedAdvertisement.title}"
                              rendered="#{ad.selectedAdvertisement != null}">
