--- a/src/main/webapp/internal/ads/ads.xhtml
+++ b/src/main/webapp/internal/ads/ads.xhtml
@@ -30,67 +30,71 @@ Environmental damage caused by the use must be kept as small as possible.
     <ui:define name="contentWithoutMenu">
         <h:form id="adForm">
             <div class="menuContainer">
-                <p:menu model="#{ad.topAdMenu}" style="width:180px;"/>
+                <p:menu model="#{ad.topAdMenu}" style="width:180px;" id="topAdMenu"/>
 
                 <p/>
                 <p:slideMenu style="width:180px;" model="#{ad.navigation}"
-                             rendered="#{ad.topAdMenuItemType.hasSubMenu}"/>
+                             rendered="#{ad.topAdMenuItemType.hasSubMenu}" id="adCategoryNavigation"/>
             </div>
 
             <div id="contentWithMenu">
-                <p:panel header="neue Anzeige" rendered="#{ad.topAdMenuItemType.create}">
-                    <h:panelGrid columns="2" columnClasses="column" cellpadding="5">
-                        <h:outputText value="Titel"/>
-                        <p:inputText value="#{ad.newAd.title}"/>
-                        <h:outputText value="Aangebot/Gesuch:"/>
-                        <p:selectOneMenu value="#{ad.newAd.type}">
+                <p:panel header="neue Anzeige" rendered="#{ad.topAdMenuItemType.create}" id="newAdPanel">
+
+                    <h:panelGrid columns="2" columnClasses="column" cellpadding="5" id="newAdGrid">
+                        <h:outputText value="Titel" id="newAdTitleLabel"/>
+                        <p:inputText value="#{ad.newAd.title}" id="newAdTitleInput"/>
+                        <h:outputText value="Aangebot/Gesuch:" id="newAdTypeLabel"/>
+                        <p:selectOneMenu value="#{ad.newAd.type}" id="newAdTypeMenu">
                             <f:selectItems value="#{ad.adType}" var="type" itemLabel="#{type.translation}"
-                                           itemValue="#{type}"/>
+                                           itemValue="#{type}" id="newAdTypeItems"/>
                         </p:selectOneMenu>
-                        <h:outputText value="Kategorie:"/>
-                        <p:selectOneMenu value="#{ad.newAd.category}">
+                        <h:outputText value="Kategorie:" id="newAdCategoryLabel"/>
+                        <p:selectOneMenu value="#{ad.newAd.category}" id="newAdCategoryMenu">
                             <f:selectItems value="#{ad.categories}" var="cat" itemLabel="#{cat.desc}"
-                                           itemValue="#{cat}"/>
+                                           itemValue="#{cat}" id="newAdCategoryItems"/>
                         </p:selectOneMenu>
 
-                        <h:outputText value="Gültig bis (Maximal ein Jahr):"/>
-                        <p:calendar locale="de" navigator="true" value="#{ad.newAd.validUntil}"/>
+                        <h:outputText value="Gültig bis (Maximal ein Jahr):" id="newAdValidityDateLabel"/>
+                        <p:calendar locale="de" navigator="true" value="#{ad.newAd.validUntil}"
+                                    id="newAdValidityInput"/>
 
-                        <h:outputText value="Anzeige:"/>
-                        <p:inputTextarea id="content" rows="4" cols="35" counter="counter" maxlength="140"
+                        <h:outputText value="Anzeige:" id="newAdContenlabel"/>
+                        <p:inputTextarea id="newAdContentInput" rows="4" cols="35" counter="newAdContentCounter"
+                                         maxlength="140"
                                          counterTemplate="{0} zeichen übrig." autoResize="false"
                                          value="#{ad.newAd.content}"/>
-                        <p:commandButton value="Erstellen" actionListener="#{ad.create}"/>
-                        <h:outputText id="counter"/>
+                        <p:commandButton value="Erstellen" actionListener="#{ad.create}" id="newAdSubmit"/>
+                        <h:outputText id="newAdContentCounter"/>
 
                     </h:panelGrid>
                 </p:panel>
 
                 <h:panelGroup id="toUpdate" layout="block">
                     <p:panel header="#{ad.selectedAdvertisement.title}"
-                             rendered="#{ad.selectedAdvertisement != null}">
-                        <h:panelGrid columns="2" columnClasses="column" cellpadding="5">
-                            <h:outputText value="User:"/>
-                            <h:panelGroup>
+                             rendered="#{ad.selectedAdvertisement != null}" id="selectedAdPanel">
+                        <h:panelGrid columns="2" columnClasses="column" cellpadding="5" id="selectedAdGrid">
+                            <h:outputText value="User:" id="selectedAdUserLabel"/>
+                            <h:panelGroup id="selectedAdUserPanel">
                                 <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{ad.selectedAdvertisement.owner.id}">
                                     <img src="#{ad.selectedAdvertisement.owner.gravatarUrl30}"
                                          alt="avatar #{ad.selectedAdvertisement.owner.displayName}"/>
-                                    <h:outputText value="#{ad.selectedAdvertisement.owner.id}"/>
+                                    <h:outputText value="#{ad.selectedAdvertisement.owner.id}"
+                                                  id="selectedAdUserOuptput"/>
                                 </a>
                             </h:panelGroup>
 
-                            <h:outputText value="Name:"/>
-                            <h:outputText value="#{ad.selectedAdvertisement.name}"/>
+                            <h:outputText value="Name:" id="selectedAdNameLabel"/>
+                            <h:outputText value="#{ad.selectedAdvertisement.name}" id="selectedAdName"/>
 
-                            <h:outputText value="Überweisung:"/>
-                            <h:panelGroup>
+                            <h:outputText value="Überweisung:" id="selectedAdTransactionLable"/>
+                            <h:panelGroup id="selectedAdtransactionPanel">
                                 <a href="${pageContext.request.servletPath}/internal/transaction.xhtml?receiverId=#{ad.selectedAdvertisement.owner.id}&amp;adId=#{ad.selectedAdvertisement.id}">
                                     überweisung an #{ad.selectedAdvertisement.owner.id}
                                 </a>
                             </h:panelGroup>
 
-                            <h:outputText value="Anzeige:"/>
-                            <h:outputText value="#{ad.selectedAdvertisement.content}"/>
+                            <h:outputText value="Anzeige:" id="selectedAdContentLabel"/>
+                            <h:outputText value="#{ad.selectedAdvertisement.content}" id="selectedAdContentOutput"/>
                         </h:panelGrid>
                     </p:panel>
                 </h:panelGroup>
